{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 53,
  "lineage": "0af7e1ff-a694-8350-9f04-1a2e23a30992",
  "resources": [
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/continuum-486419/zones/us-central1-c/instanceGroups/serverpod-production-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-02-08T02:42:26.910-08:00",
            "enable_cdn": false,
            "fingerprint": "XthvLPgY--I=",
            "generated_id": 226282227668211325,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/healthChecks/serverpod-production-health-check"
            ],
            "id": "projects/continuum-486419/global/backendServices/serverpod-production-backend-api",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-backend-api",
            "port_name": "api",
            "project": "continuum-486419",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/backendServices/serverpod-production-backend-api",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "insights",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/continuum-486419/zones/us-central1-c/instanceGroups/serverpod-production-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-02-08T02:42:27.178-08:00",
            "enable_cdn": false,
            "fingerprint": "JQ0ZsEbKkSA=",
            "generated_id": 1692034435557742204,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/healthChecks/serverpod-production-health-check"
            ],
            "id": "projects/continuum-486419/global/backendServices/serverpod-production-backend-insights",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-backend-insights",
            "port_name": "insights",
            "project": "continuum-486419",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/backendServices/serverpod-production-backend-insights",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/continuum-486419/zones/us-central1-c/instanceGroups/serverpod-production-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-02-08T02:42:26.739-08:00",
            "enable_cdn": true,
            "fingerprint": "goZI-pwZqX0=",
            "generated_id": 1631584789501171325,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/healthChecks/serverpod-production-health-check"
            ],
            "id": "projects/continuum-486419/global/backendServices/serverpod-production-backend-web",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-backend-web",
            "port_name": "web",
            "project": "continuum-486419",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/backendServices/serverpod-production-backend-web",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "serverpod-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080-8082"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-08T02:41:19.926-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/continuum-486419/global/firewalls/serverpod-production-instance",
            "log_config": [],
            "name": "serverpod-production-instance",
            "network": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/networks/serverpod-production-network",
            "priority": 1000,
            "project": "continuum-486419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/firewalls/serverpod-production-instance",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "serverpod-production-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "serverpod-instance-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-08T02:41:19.885-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/continuum-486419/global/firewalls/serverpod-production-instance-ssh",
            "log_config": [],
            "name": "serverpod-production-instance-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/networks/serverpod-production-network",
            "priority": 1000,
            "project": "continuum-486419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/firewalls/serverpod-production-instance-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "serverpod-production-instance-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.44.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-02-08T02:41:20.044-08:00",
            "id": "projects/continuum-486419/global/addresses/serverpod-production-private-ip",
            "name": "serverpod-production-private-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/networks/serverpod-production-network",
            "prefix_length": 16,
            "project": "continuum-486419",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/addresses/serverpod-production-private-ip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_network.serverpod"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/continuum-486419/global/forwardingRules/serverpod-production-api",
            "ip_address": "136.110.174.183",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-api",
            "port_range": "443",
            "project": "continuum-486419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/forwardingRules/serverpod-production-api",
            "target": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-api"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.api",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.api",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "insights",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/continuum-486419/global/forwardingRules/serverpod-production-insights",
            "ip_address": "34.149.158.164",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-insights",
            "port_range": "443",
            "project": "continuum-486419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/forwardingRules/serverpod-production-insights",
            "target": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-insights"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.insights",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.insights",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/continuum-486419/global/forwardingRules/serverpod-production-storage",
            "ip_address": "35.244.196.56",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-storage",
            "port_range": "443",
            "project": "continuum-486419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/forwardingRules/serverpod-production-storage",
            "target": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-storage"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.storage",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.storage",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/continuum-486419/global/forwardingRules/serverpod-production-web",
            "ip_address": "35.244.200.25",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "serverpod-production-web",
            "port_range": "443",
            "project": "continuum-486419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/forwardingRules/serverpod-production-web",
            "target": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web-top-domain",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_target_https_proxy.web",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "serverpod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/continuum-486419/global/networks/serverpod-production-network",
            "mtu": 0,
            "name": "serverpod-production-network",
            "project": "continuum-486419",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/networks/serverpod-production-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-08T03:12:49.290-08:00",
            "id": "projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-api",
            "name": "serverpod-production-proxy-api",
            "project": "continuum-486419",
            "proxy_bind": false,
            "proxy_id": 2110600048187658590,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-api",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/sslCertificates/serverpod-production-api-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/urlMaps/serverpod-production-balancer"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.api",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "insights",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-08T03:12:49.143-08:00",
            "id": "projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-insights",
            "name": "serverpod-production-proxy-insights",
            "project": "continuum-486419",
            "proxy_bind": false,
            "proxy_id": 8654323933025522014,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-insights",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/sslCertificates/serverpod-production-insights-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/urlMaps/serverpod-production-balancer"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.insights",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-08T03:12:49.326-08:00",
            "id": "projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-storage",
            "name": "serverpod-production-proxy-storage",
            "project": "continuum-486419",
            "proxy_bind": false,
            "proxy_id": 3588709942139670878,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-storage",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/sslCertificates/serverpod-production-storage-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/urlMaps/serverpod-production-balancer"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.storage",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-08T03:12:49.333-08:00",
            "id": "projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-web",
            "name": "serverpod-production-proxy-web",
            "project": "continuum-486419",
            "proxy_bind": false,
            "proxy_id": 7658876931880112478,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/targetHttpsProxies/serverpod-production-proxy-web",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/sslCertificates/serverpod-production-web-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/urlMaps/serverpod-production-balancer"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web",
            "module.serverpod_production.google_compute_managed_ssl_certificate.web-top-domain",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_compute_url_map.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    },
    {
      "module": "module.serverpod_production",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "serverpod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-08T03:12:36.826-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/backendServices/serverpod-production-backend-web",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "hD6DbtWzWhE=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "api.continuum-agent.online"
                ],
                "path_matcher": "api"
              },
              {
                "description": "",
                "hosts": [
                  "insights.continuum-agent.online"
                ],
                "path_matcher": "insights"
              },
              {
                "description": "",
                "hosts": [
                  "storage.continuum-agent.online"
                ],
                "path_matcher": "storage"
              }
            ],
            "id": "projects/continuum-486419/global/urlMaps/serverpod-production-balancer",
            "map_id": 5012929403960021323,
            "name": "serverpod-production-balancer",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/backendServices/serverpod-production-backend-api",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "api",
                "path_rule": [],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/backendServices/serverpod-production-backend-insights",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "insights",
                "path_rule": [],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/backendBuckets/serverpod-production-backend-storage",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "storage",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "continuum-486419",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continuum-486419/global/urlMaps/serverpod-production-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.serverpod_production.google_compute_backend_bucket.storage",
            "module.serverpod_production.google_compute_backend_service.api",
            "module.serverpod_production.google_compute_backend_service.insights",
            "module.serverpod_production.google_compute_backend_service.web",
            "module.serverpod_production.google_compute_health_check.serverpod-balancer",
            "module.serverpod_production.google_compute_health_check.serverpod-instance-group",
            "module.serverpod_production.google_compute_instance_group_manager.serverpod",
            "module.serverpod_production.google_compute_instance_template.serverpod",
            "module.serverpod_production.google_compute_network.serverpod",
            "module.serverpod_production.google_storage_bucket.public"
          ]
        }
      ]
    }
  ]
}